# lsl-labrecorder-cli

./: fisshy.xdf  test-open-close.py  test-stream.py  test.xdf  winctrlc.py  xdf2csv.py
labstreaminglayer/: .gitignore  .gitmodules  README.md  ci_console.html
labstreaminglayer/Apps/: CMakeLists.txt
labstreaminglayer/Apps/CuriaRecorder/: .bintray.json  BUILD.md  CMakeLists.txt  README.md  clirecorder.cpp  default_config.cfg  lslstreamwriter.cpp  lslstreamwriter.h  main.cpp  mainwindow.cpp  recording.cpp  recording.h
labstreaminglayer/Apps/LabRecorder/: CMakeLists.txt  clirecorder.cpp  lslstreamwriter.cpp  lslstreamwriter.h  process.cpp  process.h  recording.cpp  recording.h  test_xdf_writer.cpp
labstreaminglayer/LSL/liblsl/: BUILD.md  README.md
labstreaminglayer/LSL/liblsl/project/vs2013/: vs2013.sln
labstreaminglayer/LSL/liblsl/testing/BounceTest/: BounceTest.cpp
labstreaminglayer/doc/: Appdevelopment.md  BUILD.md
test/: Muse-6C85_(00_55_da_b3_6c_85)_Accelerometer.csv  Muse-6C85_(00_55_da_b3_6c_85)_EEG.csv  Muse-6C85_(00_55_da_b3_6c_85)_Gyroscope.csv
tests/: block_.xdf  test.xdf  testnew.xdf
tests/block_/: Muse-6C85_(00_55_da_b3_6c_85)_Accelerometer.csv  Muse-6C85_(00_55_da_b3_6c_85)_EEG.csv  Muse-6C85_(00_55_da_b3_6c_85)_Gyroscope.csv
tests/test/: Muse-6C85_(00_55_da_b3_6c_85)_Accelerometer.csv  Muse-6C85_(00_55_da_b3_6c_85)_EEG.csv  Muse-6C85_(00_55_da_b3_6c_85)_Gyroscope.csv
tests/testnew/: Muse-6C85_(00_55_da_b3_6c_85)_Accelerometer.csv  Muse-6C85_(00_55_da_b3_6c_85)_EEG.csv  Muse-6C85_(00_55_da_b3_6c_85)_Gyroscope.csv
(+44 files in other folders)
